Fix page jumping (#80)
* added step 3 of investor preparedness

* #enhance:
- replaced user scores with submissions instead
- refactored to use single customizable base function to determine submissions

* modified the redirect logic to accomodate new enhancements

* removed comments and debugger statements

* #fix

- fixed inputs responsiveness on mobile

* modified input sizes

* closed the ng-container tage

* redirect from landing

* retrieved submisssions checker

--- a/src/app/shared/components/welcome-template/welcome-template.component.scss
+++ b/src/app/shared/components/welcome-template/welcome-template.component.scss
@@ -54,6 +54,7 @@
 @include when-screen-is-atleast(large) {
   .main__section {
     display: grid;
+    gap:3rem;
     padding: 2rem 1rem;
     .hero__section {
       display: block;
