--- a/src/app/styles/forms.scss
+++ b/src/app/styles/forms.scss
@@ -116,7 +116,7 @@
   gap: .275rem;
   display: flex;
   flex-direction: column;
-
+  flex: 1;
   .input__label {
     font-size: 15px;
     font-weight: 500;
@@ -135,7 +135,7 @@
     }
   }
   .input__field{
-    padding: .75rem 1rem;
+    padding: .6rem 1rem;
     border-radius: .5rem;
     transition: all .2s linear;
     border: 1px solid #c9ddcc;
@@ -186,7 +186,7 @@
 .error-text {
   color:$danger-color ;
   font-size:$font-size-xsm ;
-  margin-top: -10px;
+  margin-top: -6px;
 }
 
 .input-error {
